--- a/order/src/main/resources/templates/v1/menu/menu.html
+++ b/order/src/main/resources/templates/v1/menu/menu.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- 헤더 위치 -->
-<th:block th:replace="/comm/header :: headerFragment"></th:block>
+<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
 
 <div id="main" style="font-size:large; text-align: center; ">
 
@@ -20,7 +20,7 @@
          style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
         <h3>[ Coffee menu Management <span style="font-size:30px;">&#9749;</span> ]</h3>
 
-        <form autocomplete="on" name="fm_menu">
+        <form action="/v1/menu_search" autocomplete="on" method="post" name="fm_menu">
             <fieldset>
 
                 <legend> [검색조건]</legend>
@@ -28,30 +28,31 @@
                                           type="date">
                 - <input id="end_date" max="2023-12-31" min="2020-01-01" name="end_date" type="date">
                 &nbsp;&nbsp;
-                <label>메뉴명</label> <input id="name" name="name" type="text">
+                <label>메뉴명</label> <input id="coffee" name="coffee" type="text">
                 &nbsp;&nbsp;
                 <label>종류</label> <select id="kind" name="kind">
                 <option value="ALL">전체</option>
-                <option value="1.커피">1.커피</option>
-                <option value="2.에이드">2.에이드</option>
-                <option value="3.스무디">3.스무디</option>
+                <option value="커피">커피</option>
+                <option value="에이드">에이드</option>
+                <option value="스무디">스무디</option>
             </select>
 
                 &nbsp;&nbsp;<input style="width: 80px;height: 30px;font-weight: bold; font-size: medium" type="submit"
                                    value="조회">
-                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a href="~~~">등록</a>
+                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a
+                    href="/v1/menu_insert">등록</a>
             </button>
-                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a href="~~~">삭제</a>
+                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a
+                    href="/v1/menu_delete">삭제</a>
             </button>
+                <button id="IdUpdateAll" onclick="onModify()"
+                        style="width: 80px;height: 30px;font-weight: bold; font-size: medium" type="button">가격수정
+                </button>
                 <!-- <a href="javascript:loadDocArray()">test</a> -->
                 <!--        <label>CheckBox : </label><span id="idCheckBox"></span>-->
             </fieldset>
-
         </form>
-
-
     </div>
-
 
     <table class="table">
         <thead>
@@ -70,61 +71,45 @@
 
 
         <tbody id="t_body">
-        <!--- 데이타 출력 부분 -->
-        <tr class="tr_td">
-            <td>Chk</td>
-            <th>커피No</th>
-            <td>메뉴명</td>
-            <td>종류</td>
-            <td>가격</td>
-            <td>등록일</td>
-            <td>수정일</td>
-            <td>수정</td>
-            <td>삭제</td>
-        </tr>
-
-        <tr class="tr_td">
-            <td>Chk</td>
-            <th>커피No</th>
-            <td>메뉴명</td>
-            <td>종류</td>
-            <td>가격</td>
-            <td>등록일</td>
-            <td>수정일</td>
-            <td>수정</td>
-            <td>삭제</td>
-        </tr>
-
-        <tr class="tr_td">
-            <td>Chk</td>
-            <th>커피No</th>
-            <td>메뉴명</td>
-            <td>종류</td>
-            <td>가격</td>
-            <td>등록일</td>
-            <td>수정일</td>
-            <td>수정</td>
-            <td>삭제</td>
-        </tr>
-
         <tr th:each="list : ${list}">
-            <td>Chk</td>
-            <th th:text="${list.get('No')}">커피No</th>
-            <td th:text="${list.get('name')}">메뉴명</td>
+            <td><input name="chkCoffeeNo" th:value="${list.get('no')}" type="checkbox"></td>
+            <th th:text="${list.get('no')}">커피No</th>
+            <td th:text="${list.get('coffee')}">메뉴명</td>
             <td th:text="${list.get('kind')}">종류</td>
             <td th:text="${list.get('price')}">가격</td>
             <td th:text="${list.get('reg_day')}">등록일</td>
             <td th:text="${list.get('mod_day')}">수정일</td>
-            <td>수정</td>
-            <td>삭제</td>
+            <td><a th:href="@{/v1/menu_update(no=${list.get('no')})}">수정</a></td>
+            <td><a th:href="@{/v1/menu_delete(no=${list.get('no')})}">삭제</a></td>
         </tr>
         </tbody>
     </table>
 </div>
 
 <!-- 푸터 위치 -->
-<th:block th:replace="/comm/footer :: footerFragment"></th:block>
+<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
+<script>
+    <!-- 현재 시간 날짜에 적용 -->
+    const now=now Date();
+    const time7=new Date(now.setDate(now.getDate()-100)); // 기간 설정
+    document.getElementById("start_date").value=time7.toISOString().slice(0,10);
+    document.getElementById("end_date").value=new Date().toISOString().slice(0,10);
 
+    function onModify(){
+    let _price = prompt("가격을 입력하세요");
+
+    if(_price == undefined){
+      return;
+    }else if(_price ==""){
+      alert("가격을 입력하세요");
+      onModify();
+    }else if(_price != ""){
+       let _frm = document.formTable;
+       _frm.hidden_price.value = _price;
+       _frm.submit();
+    }
+  }
+</script>
 </body>
 </html>
 
