feat : 기능 마무리 fix : 기능 오류 마무리 docs : v2 개설 및 개발 및 완료

--- a/order/src/main/resources/templates/v1/member/member.html
+++ b/order/src/main/resources/templates/v1/member/member.html
@@ -13,7 +13,7 @@
 <body>
 
 <!-- 헤더 위치 -->
-<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
+<th:block th:replace="~{/v1/comm/header :: headerFragment}"></th:block>
 
 <div id="main" style="font-size:large; text-align: center; ">
 
@@ -85,7 +85,8 @@
 </div>
 
 <!-- 푸터 위치 -->
-<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
+<th:block th:replace="~{/v1/comm/footer :: footerFragment}"></th:block>
+
 
 </body>
 </html>
