--- a/order/src/main/resources/templates/v1/menu/menu_update.html
+++ b/order/src/main/resources/templates/v1/menu/menu_update.html
@@ -13,15 +13,14 @@
 <body>
 
 <!-- 헤더 위치 -->
-<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
-
+<th:block th:replace="~{/v1/comm/header :: headerFragment}"></th:block>
 
 <div id="main" style="font-size:large; text-align: center; ">
 
     <div id="search" style="height: 300px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
         <h3>[ Coffee menu 수정 <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"></th:block>  </h3>
 
-        <form name="fm_menu_ins" autocomplete="on" action="/v1/menu_insert" method="post">
+        <form name="fm_menu_ins" autocomplete="on" action="/v1/menu_update" method="post">
             <fieldset>
 
                 <legend> [커피 메뉴 등록] </legend>
@@ -36,7 +35,7 @@
                 <label>가 격 </label><input type="number" name="price" th:value="${map.get('price')}"></p>
                 <input type="hidden" name="no" th:value="${map.get('no')}">
 
-                <input type="submit" value="메뉴 등록" style="width: 100px;height: 30px;font-weight: bold; font-size: medium">
+                <input type="submit" value="메뉴 수정" style="width: 100px;height: 30px;font-weight: bold; font-size: medium">
             </fieldset>
         </form>
 
@@ -46,7 +45,8 @@
 </div>
 
 <!-- 푸터 위치 -->
-<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
+<th:block th:replace="~{/v1/comm/footer :: footerFragment}"></th:block>
+
 
 </body>
 </html>
