--- a/order/src/main/resources/templates/v1/menu/menu.html
+++ b/order/src/main/resources/templates/v1/menu/menu.html
@@ -1,115 +1,120 @@
+
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Coffee Menu</title>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="/css/comm.css" rel="stylesheet" type="text/css">
-    <link href="/css/coffee.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="/css/comm.css">
+    <link rel="stylesheet" type="text/css" href="/css/coffee.css">
 
 </head>
 <body>
 
 <!-- 헤더 위치 -->
-<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
+<th:block th:replace="~{/v1/comm/header :: headerFragment}"></th:block>
 
 <div id="main" style="font-size:large; text-align: center; ">
 
-    <div id="search"
-         style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Coffee menu Management <span style="font-size:30px;">&#9749;</span> ]</h3>
+    <div id="search" style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
+        <h3>[ Coffee menu Management <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"></th:block>  </h3>
 
-        <form action="/v1/menu_search" autocomplete="on" method="post" name="fm_menu">
+        <form name="fm_menu" autocomplete="on" action="/v1/menu_search" method="post">
             <fieldset>
 
-                <legend> [검색조건]</legend>
-                <label>등록기간</label><input id="start_date" max="2023-12-31" min="2020-01-01" name="start_date"
-                                          type="date">
-                - <input id="end_date" max="2023-12-31" min="2020-01-01" name="end_date" type="date">
+                <legend> [검색조건] </legend>
+                <label>등록기간</label><input type="date" id="start_date" name="start_date" min="2020-01-01" max="2030-12-31">
+                - <input type="date" id="end_date" name="end_date" min="2020-01-01" max="2030-12-31">
                 &nbsp;&nbsp;
-                <label>메뉴명</label> <input id="coffee" name="coffee" type="text">
+                <label>메뉴명</label> <input type="text" id="coffee" name="coffee">
                 &nbsp;&nbsp;
                 <label>종류</label> <select id="kind" name="kind">
                 <option value="ALL">전체</option>
                 <option value="커피">커피</option>
+                <option value="논커피">논커피</option>
                 <option value="에이드">에이드</option>
-                <option value="스무디">스무디</option>
             </select>
 
-                &nbsp;&nbsp;<input style="width: 80px;height: 30px;font-weight: bold; font-size: medium" type="submit"
-                                   value="조회">
-                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a
-                    href="/v1/menu_insert">등록</a>
-            </button>
-                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a
-                    href="/v1/menu_delete">삭제</a>
-            </button>
-                <button id="IdUpdateAll" onclick="onModify()"
-                        style="width: 80px;height: 30px;font-weight: bold; font-size: medium" type="button">가격수정
-                </button>
+                &nbsp;&nbsp;<input type="submit" value="조회" style="width: 80px;height: 30px;font-weight: bold; font-size: medium">
+                &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a href="/v1/menu_insert">등록</a></button>
+                &nbsp;&nbsp;<button type="button" id="IdUpdateAll" style="width: 80px;height: 30px;font-weight: bold; font-size: medium" onclick="onModify()">가격수정</button>
                 <!-- <a href="javascript:loadDocArray()">test</a> -->
                 <!--        <label>CheckBox : </label><span id="idCheckBox"></span>-->
             </fieldset>
+
         </form>
+
+
     </div>
 
-    <table class="table">
-        <thead>
-        <tr class="tr_td">
-            <th>Chk</th>
-            <th>커피No</th>
-            <th>메뉴명</th>
-            <th>종류</th>
-            <th>가격</th>
-            <th>등록일</th>
-            <th>수정일</th>
-            <th>수정</th>
-            <th>삭제</th>
-        </tr>
-        </thead>
+    <form name="formTable" id="IdFormTable" method="post" action="/v1/updatePrice">
+        <table class="table">
+            <thead>
+            <tr class="tr_td">
+                <th>Chk</th>
+                <th>커피No</th>
+                <th>메뉴명</th>
+                <th>종류</th>
+                <th>가격</th>
+                <th>등록일</th>
+                <th>수정일</th>
+                <th>수정</th>
+                <th>삭제</th>
+            </tr>
+            </thead>
 
 
-        <tbody id="t_body">
-        <tr th:each="list : ${list}">
-            <td><input name="chkCoffeeNo" th:value="${list.get('no')}" type="checkbox"></td>
-            <th th:text="${list.get('no')}">커피No</th>
-            <td th:text="${list.get('coffee')}">메뉴명</td>
-            <td th:text="${list.get('kind')}">종류</td>
-            <td th:text="${list.get('price')}">가격</td>
-            <td th:text="${list.get('reg_day')}">등록일</td>
-            <td th:text="${list.get('mod_day')}">수정일</td>
-            <td><a th:href="@{/v1/menu_update(no=${list.get('no')})}">수정</a></td>
-            <td><a th:href="@{/v1/menu_delete(no=${list.get('no')})}">삭제</a></td>
-        </tr>
-        </tbody>
-    </table>
+            <tbody id="t_body">
+            <!--- 데이타 출력 부분 -->
+            <tr th:each="list : ${list}">
+                <td><input type="checkbox" name="chkCoffeeNo" th:value="${list.get('no')}"></td>
+                <th th:text="${list.get('no')}">커피No</th>
+                <td th:text="${list.get('coffee')}">메뉴명</td>
+                <td th:text="${list.get('kind')}">종류</td>
+                <td th:text="${list.get('price')}">가격</td>
+                <td th:text="${#dates.format(list.get('reg_day'), 'yyyy-MM-dd')}">등록일</td>
+                <td th:text="${#dates.format(list.get('mod_day'), 'yyyy-MM-dd')}">수정일</td>
+                <td><a th:href="@{/v1/menu_update(no=${list.get('no')})}">수정</a></td>
+                <td><a th:href="@{/v1/menu_delete(no=${list.get('no')})}">삭제</a></td>
+            </tr>
+
+
+
+
+            </tbody>
+        </table>
+        <input type="hidden" name="hidden_price">
+    </form>
 </div>
+<!--푸터위치-->
+<th:block th:replace="~{/v1/comm/footer :: footerFragment}"></th:block>
 
-<!-- 푸터 위치 -->
-<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
+
 <script>
-    <!-- 현재 시간 날짜에 적용 -->
-    const now=now Date();
-    const time7=new Date(now.setDate(now.getDate()-100)); // 기간 설정
-    document.getElementById("start_date").value=time7.toISOString().slice(0,10);
-    document.getElementById("end_date").value=new Date().toISOString().slice(0,10);
+    /* 현재 시간 날짜에 적용시키기 */
+    const now = new Date();	// 현재 날짜 및 시간
+    const time7 = new Date(now.setDate(now.getDate() - 100));	// 기간 설정
+    document.getElementById("start_date").value= time7.toISOString().slice(0,10);
+    document.getElementById("end_date").value= new Date().toISOString().slice(0,10);
 
     function onModify(){
-    let _price = prompt("가격을 입력하세요");
+      let _price = prompt("가격을 입력하세요");
 
-    if(_price == undefined){
-      return;
-    }else if(_price ==""){
-      alert("가격을 입력하세요");
-      onModify();
-    }else if(_price != ""){
-       let _frm = document.formTable;
-       _frm.hidden_price.value = _price;
-       _frm.submit();
+      if(_price == undefined){
+        return;
+      }else if(_price ==""){
+        alert("가격을 입력하세요");
+        onModify();
+      }else if(_price != ""){
+         let _frm = document.formTable;
+         _frm.hidden_price.value = _price;
+         _frm.submit();
+      }
     }
-  }
+
 </script>
+
 </body>
 </html>
 
