--- a/order/src/main/resources/templates/v1/order/order.html
+++ b/order/src/main/resources/templates/v1/order/order.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- 헤더 위치 -->
-<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
+<th:block th:replace="~{/v1/comm/header :: headerFragment}"></th:block>
 
 <div id="main" style="font-size:large; text-align: center; ">
 
@@ -93,7 +93,8 @@
 </div>
 
 <!-- 푸터 위치 -->
-<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
+<th:block th:replace="~{/v1/comm/footer :: footerFragment}"></th:block>
+
 
 </body>
 </html>
