--- a/order/src/main/resources/templates/v1/order/order.html
+++ b/order/src/main/resources/templates/v1/order/order.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Coffee Order List</title>
+    <title>item Order List</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="/css/comm.css">
-    <link rel="stylesheet" type="text/css" href="/css/coffee.css">
+    <link rel="stylesheet" type="text/css" href="/css/item.css">
 
 </head>
 <body>
@@ -17,7 +17,7 @@
 <div id="main" style="font-size:large; text-align: center; ">
 
     <div id="search" style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Coffee Order List <span style="font-size:30px;">&#128722;</span> ]</h3>
+        <h3>[ item Order List <span style="font-size:30px;">&#128722;</span> ]</h3>
 
         <form name="fm_order" autocomplete="on">
             <fieldset>
