--- a/order/src/main/resources/templates/v1/comm/header.html
+++ b/order/src/main/resources/templates/v1/comm/header.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="headerFragment">
     <div class="topnav">
         <a href="/v1/home">Home</a>
-        <a href="/v1/menu">커피메뉴</a>
+        <a href="/v1/item">커피메뉴</a>
         <a href="/v1/order">주문내역</a>
         <a href="/v1/member">고객정보</a>
     </div>
