--- a/order/src/main/resources/templates/v1/home/home.html
+++ b/order/src/main/resources/templates/v1/home/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Coffee _ Home</title>
+  <title>item _ Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
