--- a/order/src/main/resources/templates/v1/member/member.html
+++ b/order/src/main/resources/templates/v1/member/member.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="/css/comm.css">
-    <link rel="stylesheet" type="text/css" href="/css/coffee.css">
+    <link rel="stylesheet" type="text/css" href="/css/item.css">
 
 </head>
 <body>
