--- a/order/src/main/resources/templates/v2/comm/header.html
+++ b/order/src/main/resources/templates/v2/comm/header.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="headerFragment">
     <div class="topnav">
         <a href="/v2/home">Home</a>
-        <a href="/v2/menu">커피메뉴</a>
+        <a href="/v2/item">커피메뉴</a>
         <a href="/v2/order">주문내역</a>
         <a href="/v2/member">고객정보</a>
     </div>
