--- a/order/src/main/resources/templates/v2/item/item.html
+++ b/order/src/main/resources/templates/v2/item/item.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Coffee Menu</title>
+    <title>item item</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <link href="/css/comm.css" rel="stylesheet" type="text/css">
-    <link href="/css/coffee.css" rel="stylesheet" type="text/css">
+    <link href="/css/item.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -18,18 +18,18 @@
 
     <div id="search"
          style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Coffee menu Management <span style="font-size:30px;">&#9749;</span> ]
+        <h3>[ Item Management <span style="font-size:30px;">&#9749;</span> ]
             <th:block th:text="${hello}"></th:block>
         </h3>
 
-        <form action="/v2/menu_search" autocomplete="on" method="post" name="fm_menu">
+        <form action="/v2/item_search" autocomplete="on" method="post" name="fm_item">
             <fieldset>
                 <legend> [검색조건]</legend>
                 <label>등록기간</label><input id="start_date" max="2030-12-31" min="2020-01-01" name="start_date"
                                           type="date">
                 - <input id="end_date" max="2030-12-31" min="2020-01-01" name="end_date" type="date">
                 &nbsp;&nbsp;
-                <label>메뉴명</label> <input id="coffee" name="coffee" type="text">
+                <label>메뉴명</label> <input id="item" name="item" type="text">
                 &nbsp;&nbsp;
                 <label>종류</label> <select id="kind" name="kind">
                 <option value="ALL">전체</option>
@@ -41,7 +41,7 @@
                 &nbsp;&nbsp;<input style="width: 80px;height: 30px;font-weight: bold; font-size: medium" type="submit"
                                    value="조회">
                 &nbsp;&nbsp;<button style="width: 80px;height: 30px;font-weight: bold; font-size: medium"><a
-                    href="/v2/menu_insert">등록</a></button>
+                    href="/v2/item_insert">등록</a></button>
                 &nbsp;&nbsp;<button id="IdUpdateAll" onclick="onModify()"
                                     style="width: 80px;height: 30px;font-weight: bold; font-size: medium"
                                     type="button">가격수정
@@ -70,15 +70,15 @@
             <tbody id="t_body">
             <!--- 데이타 출력 부분 -->
             <tr th:each="list : ${list}">
-                <td><input name="chkCoffeeNo" th:value="${list.getNo()}" type="checkbox"></td>
+                <td><input name="chkItemNo" th:value="${list.getNo()}" type="checkbox"></td>
                 <th th:text="${list.getNo()}">커피No</th>
-                <td th:text="${list.getCoffee()}">메뉴명</td>
+                <td th:text="${list.getItem()}">메뉴명</td>
                 <td th:text="${list.getKind()}">종류</td>
                 <td th:text="${#numbers.formatInteger(list.getPrice(),0,'COMMA')}">가격</td>
                 <td th:text="${list.getReg_day()}">등록일</td>
                 <td th:text="${list.getMod_day()}">수정일</td>
-                <td><a th:href="@{/v2/menu_update(no=${list.getNo()})}">수정</a></td>
-                <td><a th:href="@{/v2/menu_delete(no=${list.getNo()})}">삭제</a></td>
+                <td><a th:href="@{/v2/item_update(no=${list.getNo()})}">수정</a></td>
+                <td><a th:href="@{/v2/item_delete(no=${list.getNo()})}">삭제</a></td>
             </tr>
             </tbody>
         </table>
@@ -96,6 +96,22 @@
     const endTime = new Date(endNow.setDate(endNow.getDate() + 1));
     document.getElementById("start_date").value= startTime.toISOString().slice(0,10);
     document.getElementById("end_date").value= endTime.toISOString().slice(0,10);
+
+      function onModify(){
+      let _price = prompt("가격을 입력하세요");
+
+      if(_price == undefined){
+        return;
+      }else if(_price ==""){
+        alert("가격을 입력하세요");
+        onModify();
+      }else if(_price != ""){
+         let _frm = document.formTable;
+         _frm.hidden_price.value = _price;
+         _frm.submit();
+      }
+    }
+
 </script>
 
 </body>
