--- a/order/src/main/resources/templates/v2/item/item_insert.html
+++ b/order/src/main/resources/templates/v2/item/item_insert.html
@@ -2,29 +2,29 @@
 <!DOCTYPE html>
 <html lang="ko"  xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Coffee Menu</title>
+    <title>item item</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="/css/comm.css">
-    <link rel="stylesheet" type="text/css" href="/css/coffee.css">
+    <link rel="stylesheet" type="text/css" href="/css/item.css">
 
 </head>
 <body>
 
 <!-- 헤더 위치 -->
-<th:block th:replace="~{/v1/comm/header :: headerFragment}"></th:block>
+<th:block th:replace="~{/v2/comm/header :: headerFragment}"></th:block>
 
 <div id="main" style="font-size:large; text-align: center; ">
 
     <div id="search" style="height: 300px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Coffee menu 등록 <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"></th:block>  </h3>
+        <h3>[ 상품 등록 <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"></th:block>  </h3>
 
-        <form name="fm_menu_ins" autocomplete="on" action="/v1/menu_insert" method="post">
+        <form name="fm_item_ins" autocomplete="on" action="/v2/item_insert" method="post">
             <fieldset>
 
                 <legend> [커피 메뉴 등록] </legend>
-                <label>메뉴명</label> <input type="text" id="coffee" name="coffee"></p>
+                <label>메뉴명</label> <input type="text" id="item" name="item"></p>
                 <label>종 류 </label><select name="kind">
                 <option value="커피">커피</option>
                 <option value="논커피">논커피</option>
@@ -44,7 +44,7 @@
 </div>
 
 <!-- 푸터 위치 -->
-<th:block th:replace="~{/v1/comm/footer :: footerFragment}"></th:block>
+<th:block th:replace="~{/v2/comm/footer :: footerFragment}"></th:block>
 
 
 </body>
