--- a/order/src/main/resources/templates/v2/item/item_update.html
+++ b/order/src/main/resources/templates/v2/item/item_update.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="ko"  xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Coffee Menu</title>
+    <title>item item</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="/css/comm.css">
-    <link rel="stylesheet" type="text/css" href="/css/coffee.css">
+    <link rel="stylesheet" type="text/css" href="/css/item.css">
 
 </head>
 <body>
@@ -18,21 +18,22 @@
 <div id="main" style="font-size:large; text-align: center; ">
 
     <div id="search" style="height: 300px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Coffee menu 등록 <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"></th:block>  </h3>
+        <h3>[ 상품 수정 <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"></th:block>  </h3>
 
-        <form name="fm_menu_ins" autocomplete="on" action="/v2/menu_insert" method="post">
+        <form name="fm_item_ins" autocomplete="on" action="/v2/item_update" method="post">
             <fieldset>
 
                 <legend> [커피 메뉴 등록] </legend>
-                <label>메뉴명</label> <input type="text" id="coffee" name="coffee"></p>
+                <label>메뉴명</label> <input type="text" id="name" name="item" th:value="${map.get('item')}"></p>
                 <label>종 류 </label><select name="kind">
-                <option value="커피">커피</option>
-                <option value="논커피">논커피</option>
-                <option value="에이드">에이드</option>
+                <option value="커피" th:selected="${map.get('kind')} == '커피'">커피</option>
+                <option value="논커피" th:selected="${map.get('kind')} == '논커피'">논커피</option>
+                <option value="에이드" th:selected="${map.get('kind')} == '에이드'">에이드</option>
             </select>
                 </p>
                 &nbsp;&nbsp;
-                <label>가 격 </label><input type="number" name="price"></p>
+                <label>가 격 </label><input type="number" name="price" th:value="${map.get('price')}"></p>
+                <input type="hidden" name="no" th:value="${map.get('no')}">
 
                 <input type="submit" value="메뉴 등록" style="width: 100px;height: 30px;font-weight: bold; font-size: medium">
             </fieldset>
