docs : Header수정 및 item과 order 아이콘 수정

--- a/order/src/main/resources/templates/v2/item/item.html
+++ b/order/src/main/resources/templates/v2/item/item.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>item item</title>
+    <title>Item List</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
@@ -18,7 +18,7 @@
 
     <div id="search"
          style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Item Management <span style="font-size:30px;">&#9749;</span> ]
+        <h3>[ Item Management <span style="font-size:30px;">&#128722;</span> ]
             <th:block th:text="${hello}"></th:block>
         </h3>
 
