--- a/order/src/main/resources/templates/v2/order/order.html
+++ b/order/src/main/resources/templates/v2/order/order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>item Order List</title>
+    <title>Order List</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
@@ -18,7 +18,7 @@
 
     <div id="search"
          style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ item Order List <span style="font-size:30px;">&#128722;</span> ]</h3>
+        <h3>[ Order List <span style="font-size:30px;">&#129534;</span> ]</h3>
 
         <form action="/v2/order_search" autocomplete="on" method="post" name="fm_order">
             <fieldset>
