fix : 상품 목록 화면 조회 불가 오류 수정 style : 헤더 푸터 수정, 홈페이지 수정

--- a/order/src/main/resources/templates/v1/comm/header.html
+++ b/order/src/main/resources/templates/v1/comm/header.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="headerFragment">
     <div class="topnav">
-        <a href="/v1/home">Home</a>
+        <a href="/v1/v1/home">Home</a>
         <a href="/v1/item">커피메뉴</a>
         <a href="/v1/order">주문내역</a>
         <a href="/v1/member">고객정보</a>
