--- a/order/src/main/resources/templates/v3/comm/header.html
+++ b/order/src/main/resources/templates/v3/comm/header.html
@@ -3,13 +3,10 @@
 <th:block th:fragment="headerFragment">
     <div class="topnav">
         <a href="/v3/home">Home</a>
-        <a href="/v3/itemlist">상품목록</a>
-        <a href="/v3/item" th:if="${session.ss_role == 'ADMIN'}">상품관리</a>
-        <a href="/v3/order" th:if="${session.ss_role == 'ADMIN'}">주문내역</a>
-        <a href="/v3/member" th:if="${session.ss_role == 'ADMIN'}">고객정보</a>
-        <a th:href="${session.ss_id != null} ? '/v3/login/logout' : '/v3/login/form'"
-           th:text="${session.ss_id != null} ? '로그아웃' : '로그인' ">
-        </a>
+        <a href="/v3/item">상품목록</a>
+        <a href="/v3/order">주문내역</a>
+        <a href="/v3/member">고객정보</a>
+        <a href="/v3/login/form">로그인</a>
     </div>
 </th:block>
 </html>
